# kaggle-projects

./: .gitignore  README.md  pyproject.toml
projects/: loan_default_dataset_exploration.ipynb
