[project]
name = "kaggle-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.2",
    "ipython>=9.15.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "missingno>=0.5.2",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]
